--- a/src/App.scss
+++ b/src/App.scss
@@ -7,4 +7,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+
+  .gameOptionsContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
