--- a/src/App.scss
+++ b/src/App.scss
@@ -8,10 +8,39 @@
   align-items: center;
   justify-content: space-evenly;
 
+  .rangeGeneratorContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   .gameOptionsContainer {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    width: 50%;
+
+    .low {
+      background-color: tomato;
+      color: black;
+      padding: 30px;
+    }
+
+    .high {
+      background-color: lightblue;
+      color: black;
+      padding: 30px;
+    }
+
+    .correct {
+      background-color: lightgreen;
+      color: black;
+      padding: 30px;
+    }
+  }
+
+  .guessedNumberContainer {
+    display: flex;
   }
 }
